mail/yaml/mail-service-deploy.yaml
apiVersion: v1
kind: Deployment
metadata:
  name: mail-service-deployment
spec:
  replicas: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: mail-app
    spec:
      containers:
      - name: mail-app
        image: asia.gcr.io/coral-shoreline-209014/mail-service:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
