mail/yaml/mail-service-rc-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mail-service-svc
spec:
  selector:
    app: mail-service
  ports:
   - port: 80
     protocol: TCP
     targetPort: 8080
  type: LoadBalancer
