mail/yaml/mail-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mail-service-service
spec:
  selector:
    app: mail-app
  ports:
   - port: 80
     protocol: TCP
     targetPort: 8080
  type: ClusterIP
