mail/yaml/mail-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mail-svc
spec:
  selector:
    app: mail-app
  ports:
   - port: 80
     protocol: TCP
     targetPort: 8080
  type: LoadBalancer
