mail/yaml/kafka-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kafka-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: kafka-service
          servicePort: 9092
