mail/yaml/mail-service-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mail-service-ingress
spec:
  rules:
  - http:
      paths:
      - path: /mail
        backend:
          serviceName: mail-service-service
          servicePort: 8080
